Inclusion of impersonate credentials structure
